# pixelmosh

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README.md  build.rs  codecov.yml
.github/workflows/: cd.yml  ci.yml  codecov.yml  test.yml  tests.yml
benches/: README.md  images.rs  mosh.rs
resources/: style.css  window.ui
src/: cli.rs  engine.rs  err.rs  fx.rs  gui.rs  lib.rs  main.rs  ops.rs  util.rs
src/gui/: image.rs  window.rs
src/gui/window/: imp.rs  mod.rs
src/resources/: org.hellbyte.pixelmosh.desktop  resources.gresource.xml  shortcuts.ui  style.css  window.ui
src/tests/: mod.rs
src/util/: mod.rs
src/utils/: mod.rs
tests/: cli.rs  main.rs
