[package]
name = "pixelmosh"
version = "3.1.0"
edition = "2021"
repository = "https://github.com/charlesrocket/pixelmosh"
authors = ["charlesrocket"]
description = "PNG corrupter"
categories = ["command-line-utilities", "multimedia::images"]
keywords = ["glitch"]
license = "MIT"
readme = "README.md"
build = "build.rs"
exclude = [".github", "codecov.yml", "example/delorean.png"]

[profile.release]
debug = 0
strip = true
lto = true

[lib]
name = "libmosh"
path = "src/lib.rs"

[[bin]]
name = "pixelmosh"
path = "src/main.rs"
test = false

[features]
gui = ["dep:adw", "dep:glib", "dep:gtk"]

[dependencies]
adw = { version = "0.2.1", package = "libadwaita", optional = true }
clap = { version = "4.1", features = ["string"] }
fast_image_resize = "2.4.0"
glib = { version = "0.16.7", optional = true }
gtk = { version = "0.5", package = "gtk4", optional = true }
indicatif = "0.17.2"
png = "0.17.7"
rand = "0.8.5"
rand_chacha = "0.3.1"
rgb = "0.8"

[dev-dependencies]
adler = "1"
assert_cmd = "2"
predicates = "2"

[build-dependencies]
glib-build-tools = "0.16.3"
