[package]
name = "pixelmosh"
version = "3.1.2"
edition = "2021"
repository = "https://github.com/charlesrocket/pixelmosh"
authors = ["charlesrocket"]
description = "PNG corrupter"
categories = ["command-line-utilities", "multimedia::images"]
keywords = ["glitch"]
license = "MIT"
readme = "README.md"
build = "build.rs"
exclude = [".github", "codecov.yml", "example/delorean.png"]

[profile.release]
debug = 0
strip = true
lto = true

[lib]
name = "libmosh"
path = "src/lib.rs"

[[bin]]
name = "pixelmosh"
path = "src/main.rs"
test = false

[features]
default = ["cli"]
cli = ["dep:clap", "dep:indicatif"]
gui = ["dep:adw", "dep:glib", "dep:gtk"]

[dependencies]
adw = { version = "0.3", package = "libadwaita", optional = true }
clap = { version = "4.1", features = ["string"], optional = true }
fast_image_resize = "2.6"
glib = { version = "0.17", optional = true }
gtk = { version = "0.6", package = "gtk4", optional = true }
indicatif = { version = "0.17.3", optional = true }
png = "0.17.7"
rand = "0.8.5"
rand_chacha = "0.3.1"

[dev-dependencies]
adler = "1"
assert_cmd = "2"
predicates = "2"

[build-dependencies]
glib-build-tools = "0.17"
