[package]
name = "pixelmosh"
version = "3.5.0"
edition = "2021"
repository = "https://github.com/charlesrocket/pixelmosh"
authors = ["charlesrocket"]
description = "PNG corrupter"
categories = ["command-line-utilities", "multimedia::images"]
keywords = ["glitch"]
license = "MIT"
readme = "README.md"
build = "build.rs"
exclude = [".github", "codecov.yml", "example/delorean.png"]

[profile.release]
debug = 0
strip = true
lto = true

[lib]
name = "libmosh"
path = "src/lib.rs"

[[bin]]
name = "pixelmosh"
path = "src/main.rs"
test = false

[features]
default = ["cli"]
cli = ["dep:clap", "dep:indicatif"]
gui = ["dep:adw", "dep:glib", "dep:gtk"]

[dependencies]
adw = { version = "0.4", package = "libadwaita", features = ["v1_3"], optional = true }
clap = { version = "4.3", features = ["string"], optional = true }
fast_image_resize = "2.7"
glib = { version = "0.17", optional = true }
gtk = { version = "0.6", package = "gtk4", features = ["v4_10"], optional = true }
indicatif = { version = "0.17.5", optional = true }
png = "0.17.8"
rand = "0.8.5"
rand_chacha = "0.3.1"

[dev-dependencies]
adler = "1"
assert_cmd = "2"
predicates = "3"

[build-dependencies]
glib-build-tools = "0.17"
